# ftrl

./: .gitignore  CMakeLists.txt  Makefile  a.out  auc.cpp  ftrl_predict.cpp  ftrl_train.cpp  logloss.cpp
src/DB/: mapDB.h  vectorDB.h  virtualDB.h
src/Trainer/: FTRL.cpp  FTRL.h
src/Unit/: entityUnit.h  entityUnit.h.gch  modelUnit.h  modelUnit.h.gch
src/Utils/: utils.cpp  utils.h  utils.h.gch
